removed xml bind